--- a/style/style.css
+++ b/style/style.css
@@ -336,6 +336,7 @@ img {
     font-size: var(--small-font-size);
     color: var(--text-color-light);
     margin-top: 3.5rem;
+    margin-bottom: 1.5rem;
 }
 
 /* =====================PAGE 404===================== */
